[gd_scene load_steps=26 format=2]

[ext_resource path="res://Enemies/Bosses/Serpent/serpent-segment-green-half.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bosses/Serpent/serpent-segment-red-full.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Bosses/Serpent/SerpentSegment.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Bosses/Serpent/serpent-segment-red-half.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Bosses/Serpent/serpent-segment-green-full.png" type="Texture" id=5]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/Stats/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HurtBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/Attacks/VoidMoteThrower.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/active = false

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = SubResource( 8 )
shader_param/active = false

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/active = false

[sub_resource type="Shader" id=12]
code = "shader_type canvas_item;

uniform bool active = false;

	void fragment() {
		vec4 previous_color = texture(TEXTURE, UV);
		vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
		vec4 new_color = previous_color;
		if (active){
			new_color = white_color;
		}
		COLOR = new_color;
	}"

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 12 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.99999
height = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RedSpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSpriteHalf:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenSpriteFull:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenSpriteHalf:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RedSpriteFull:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSpriteHalf:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenSpriteFull:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenSpriteHalf:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RedSpriteFull:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSpriteHalf:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenSpriteFull:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenSpriteHalf:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GreenSpriteHalf:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GreenSpriteFull:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RedSpriteHalf:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RedSpriteFull:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/path = NodePath("RedSpriteFull:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RedSpriteHalf:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenSpriteFull:material:shader_param/active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GreenSpriteHalf:material:shader_param/active")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=17]
radius = 5.99998
height = 8.0

[node name="SerpentSegment" type="KinematicBody2D"]
z_as_relative = false
collision_layer = 16
collision_mask = 35
script = ExtResource( 3 )

[node name="RedSpriteFull" type="Sprite" parent="."]
visible = false
material = SubResource( 7 )
position = Vector2( 1, -10 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )
hframes = 5

[node name="RedSpriteHalf" type="Sprite" parent="."]
material = SubResource( 9 )
position = Vector2( 1, -10 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 4 )
hframes = 5

[node name="GreenSpriteFull" type="Sprite" parent="."]
visible = false
material = SubResource( 11 )
position = Vector2( 1, -10 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 5 )
hframes = 5

[node name="GreenSpriteHalf" type="Sprite" parent="."]
visible = false
material = SubResource( 13 )
position = Vector2( 1, -10 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "stop"
anims/RESET = SubResource( 14 )
anims/start = SubResource( 15 )
anims/stop = SubResource( 16 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 3

[node name="HurtBox" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 17 )

[node name="VoidMoteThrower" parent="." instance=ExtResource( 9 )]

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_end" from="HurtBox" to="." method="_on_HurtBox_invincible_end"]
[connection signal="invincible_start" from="HurtBox" to="." method="_on_HurtBox_invincible_start"]

[editable path="HurtBox"]
[editable path="HitBox"]
